--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
         "dev": "vite"
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.5.2",
         "@tailwindcss/vite": "^4.1.7",
+        "alpinejs": "^3.4.2",
+        "autoprefixer": "^10.4.2",
         "axios": "^1.8.2",
         "concurrently": "^9.1.2",
         "laravel-vite-plugin": "^1.2.0",
-        "tailwindcss": "^4.1.7",
+        "postcss": "^8.4.31",
+        "tailwindcss": "^3.1.0",
         "vite": "^6.2.4"
     }
 }
